tables added and made responsive extra styling added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
   <!-- Custom styles for this template -->
-  <link href="carousel.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -47,9 +47,9 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-black">
       <div class="container-fluid">
 
-        <img src="https://i.imgur.com/kwg6zuL.png" width="30" height="30" class="nav-logo"
+        <img src="https://i.imgur.com/yC4IfAS.png" width="30" height="30" class="nav-logo"
           class="d-inline-block align-top" alt="">
-        <a class="navbar-brand" href="#">Fonseca Fitness</a>
+        <a class="navbar-brand" href="#"><span>Fonseca Fitness</span> </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
           aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -57,13 +57,13 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="#"><span>Home</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#timetable">Timetable</a>
+              <a class="nav-link" href="#timetable"><span>Timetable</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#classes">Membership</a>
+              <a class="nav-link" href="#membership-group"><span>Membership</span></a>
             </li>
           </ul>
           <form class="d-flex">
@@ -126,7 +126,7 @@
             <p>We work in synergy bringing together individual skills and expertise to createbest possible outcomes for
               you, the women of Fonseca Fitness.
             </p>
-            <p><a class="btn" href="#classes">View Classes</a></p>
+            <p><a class="btn" href="#timetable">View Classes</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img class="rounded-circle" src="https://i.imgur.com/EnXNUrl.png" alt="" height="140px" width="140px">
@@ -184,17 +184,15 @@
             <!-- <title>Placeholder</title> -->
             <!-- <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em">Head Coach: Farah
             Fonseca</text> -->
-
-
           </div>
         </div>
 
         <hr>
 
-        <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="row row-cols-1 row-cols-md-2 g-4 text-center">
           <div class="col">
             <div class="card">
-              <img src="https://i.imgur.com/uVH4HUp.png"" class=" card-img-top" alt="...">
+              <img src="https://i.imgur.com/uVH4HUp.png"" class=" card-img-top mx-auto" alt="...">
               <div class="card-body">
                 <h5 class="card-title"><span>Zoë Baxter</span></h5>
                 <p class="card-text">Zoë is our second head coach and will be a familiar face to many. Zoë will be
@@ -217,7 +215,7 @@
           </div>
           <div class="col">
             <div class="card" id="card">
-              <img src="https://i.imgur.com/ckfLVJ7.png" class="card-img-top fa-image-portrait" alt="...">
+              <img src="https://i.imgur.com/ckfLVJ7.png" class="card-img-top mx-auto" alt="...">
               <div class="card-body">
                 <h5 class="card-title"><span>Tom</span></h5>
                 <p class="card-text">Tom is our women's self defence coach and will be in the studio twice a week.
@@ -246,7 +244,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="https://i.imgur.com/KPSqKqc.png" class="card-img-top" alt="...">
+              <img src="https://i.imgur.com/KPSqKqc.png" class="card-img-top mx-auto" alt="...">
               <div class="card-body">
                 <h5 class="card-title"><span>Trish</span></h5>
                 <p class="card-text">Trish is our over 50’s coach and will be in the studio once a week.
@@ -263,7 +261,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="https://i.imgur.com/P3JHZqD.png" class="card-img-top" alt="...">
+              <img src="https://i.imgur.com/P3JHZqD.png" class="card-img-top mx-auto mx-auto" alt="...">
               <div class="card-body">
                 <h5 class="card-title"><span>Lola</span></h5>
                 <p class="card-text">Lola is our pre and postnatal personal trainer.
@@ -289,7 +287,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="https://i.imgur.com/nOuC0TB.png" class="card-img-top" alt="...">
+              <img src="https://i.imgur.com/nOuC0TB.png" class="card-img-top mx-auto" alt="...">
               <div class="card-body">
                 <h5 class="card-title"><span>Janka</span></h5>
                 <p class="card-text">Janka is our Calisthenics coach and personal trainer. You’ll see Janka teaching
@@ -314,7 +312,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="https://i.imgur.com/sbbWIgY.png" class="card-img-top" alt="...">
+              <img src="https://i.imgur.com/sbbWIgY.png" class="card-img-top mx-auto" alt="...">
               <div class="card-body">
                 <h5 class="card-title"><span>Beth</span></h5>
                 <p class="card-text">Beth is our Yoga Coach. You will see Beth in the studio on Friday evenings.
@@ -335,40 +333,31 @@
         <hr class="featurette-divider">
       </div>
       <div class="container-fluid">
-        <div class="card-group">
-          <div class="card">
-            <img src="https://i.imgur.com/ZM6Wm4S.png" id="timetable" class="card-img mx-auto" alt="...">
+        <div class="row justify-content-center">
+          <div class="col-auto">
+            <div class="table-responsive">
+              <table class="table">
+                <img src="https://i.imgur.com/kwbAzMF.png" class="card-img" id="timetable" alt="...">
+
+                <img src="https://i.imgur.com/yJMKFq8.png" class="card-img" id="timetable" alt="">
+
+                <img src="https://i.imgur.com/vJWE5Ij.png" class="card-img" id="timetable" alt="">
+
+              </table>
+            </div>
           </div>
-
-          <hr>
-
-
-
-
-          <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-            height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-            preserveAspectRatio="xMidYMid slice" focusable="false">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em"></text>
-          </svg> -->
-
         </div>
 
-
-        <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-            height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-            preserveAspectRatio="xMidYMid slice" focusable="false">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em"></text>
-          </svg> -->
-
       </div>
+
+    </div>
     </div>
 
     <hr class="featurette-divider">
 
     <div class="row featurette">
-      <div class="col-md-7">
+      <div class="col-md-10 text-center mx-auto">
+        <img class="rounded-circle" src="https://i.imgur.com/yC4IfAS.png" alt="" height="140px" width="140px">
         <h2 class="featurette-heading"><span>Mission Statement</span></h2>
         <p class="lead">Fonseca Fitness is an all-encompassing environment for women. We want women
           to have the confidence to train throughout life, taking into consideration the role hormones play and
@@ -384,40 +373,31 @@
           Why? Because
           there is nothing else
           like it.</p>
-        <p>The environment will provide an exclusive membership, with unlimited access to a variety of
+        <p class="lead">The environment will provide an exclusive membership, with unlimited access to a variety of
           classes, 1-1 personaltraining, nutritional support, along with discount on supplements* and clothing
           brands*
           that work with Fonseca Fitness </p>
       </div>
-      <div class="col-md-4">
-        <img src="https://i.imgur.com/09chmVj.png" height="600px" width="600px" alt="">
-
-        <title>Placeholder</title>
-        <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em"></text>
-        </svg>
-
-
-      </div>
     </div>
     <hr class="featurette-divider">
+    <div class="row justify-content-center">
+      <div class="col-auto">
+        <div class="table-responsive">
+          <table class="table">
+            <img src="https://i.imgur.com/F7w5j78.png" class="card-img" id="membership" alt="...">
 
-    <div class="card-group">
-      <div class="container-fluid">
-        <div class="card-title">
-          <h2 class="mx-auto" id="classes"></h2>
-        </div>
-        <div class="card">
-          <img src="https://i.imgur.com/5CFxGUh.png" class="card-img mx-auto" id="membership" alt="">
-        </div>
+            <img src="https://i.imgur.com/AGr4CjX.png" class="card-img" id="membership" alt="">
 
+            <img src="https://i.imgur.com/n34Yul2.png" class="card-img" id="membership" alt="...">
+
+          </table>
+        </div>
       </div>
+    </div>
 
-      <hr class="featurette-divider">
-
-      <!-- /END THE FEATURETTES -->
-
-    </div><!-- /.container -->
-    <div class="container-contact100 mx-auto">
+    <hr>
+    <!-- /.container -->
+    <!-- <div class="container-contact100 mx-auto">
 
       <div class="wrap-contact100">
         <form class="contact100-form validate-form mx-auto">
@@ -450,24 +430,45 @@
           </div>
         </form>
       </div>
-    </div>
+    </div> -->
 
     <!-- FOOTER -->
-    <footer class="container">
-      <strong class="float-end">Visit Fonseca Fitness at <br>
-        Unit 3 Telford Road, <br>
-        Basingstoke <br>
-        RG21 6YU <br>
-        <a class="btt" href="#">Back
-          to top</a>
-      </strong>
-      <p class="float-start">Call or e-mail Farah: 07568163126 - farah@fonsecafitness.co.uk <br>
 
-        <img src="https://i.imgur.com/kwg6zuL.png" width="30" height="30" class="nav-logo"
-          class="d-inline-block align-top float-end" alt=""> Fonseca Fitness
-        <a href="https://www.facebook.com/FonsecaFitness1/"><i class="fa-brands fa-facebook-square fa-2x"></i></a>
-        <a href="https://www.instagram.com/fonsecafitness_/"><i class="fa-brands fa-instagram fa-2x"></i></a>
-      </p>
+    <footer class="footer">
+      <nav class="navbar navbar-expand-md navbar-dark bg-black">
+        <div class="container-fluid">
+
+          <!-- <img src="https://i.imgur.com/yC4IfAS.png" width="30" height="30" class="nav-logo"
+            class="d-inline-block align-top" alt=""> -->
+          <a class="navbar-brand" href="#"><strong><span>Fonseca Fitness</span></strong><br>
+            <span> Unit 3 Telford Road <br>
+              Basingstoke <br>
+              RG21 6YU </span><br>
+            <a class="nav-link active" aria-current="page" href="#"><span>Back to the Top</span></a>
+          </a>
+
+          <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+              <li class="nav-item">
+
+              </li>
+            </ul> -->
+          <span class="mx auto">Call or e-mail Farah: 07568163126 - farah@fonsecafitness.co.uk </span>
+          <form class="d-flex">
+
+            <a href="https://www.facebook.com/FonsecaFitness1/"><i class="fa-brands fa-facebook-square fa-2x"></i></a>
+            <a href="https://www.instagram.com/fonsecafitness_/"><i class="fa-brands fa-instagram fa-2x"></i></a>
+
+            <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
+
+          </form>
+        </div>
+      </nav>
+
     </footer>
   </main>
 
