--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/carousel/">
 
 
@@ -83,13 +84,13 @@
 
     <div class="container-fluid">
       <div class="card-group">
-        <div class="card">
+        <div class="card animate__animated animate__fadeInDown">
           <img src="https://i.imgur.com/acKb11x.jpg" class="card-img" alt="...">
         </div>
-        <div class="card">
+        <div class="card animate__animated animate__fadeInDown">
           <img src="https://i.imgur.com/IcNRkxa.jpg" class="card-img" alt="">
         </div>
-        <div class="card">
+        <div class="card animate__animated animate__fadeInDown">
           <img src="https://i.imgur.com/woPJxPf.jpg" class="card-img" alt="...">
         </div>
 
@@ -102,7 +103,8 @@
         <!-- Three columns of text below the carousel -->
         <div class="row">
           <div class="col-lg-4">
-            <img class="rounded-circle" src="https://i.imgur.com/EubR9C1.png?1" alt="" height="140px" width="140px">
+            <img class="rounded-circle animate__animated animate__heartBeat" src="https://i.imgur.com/FXMlHYl.png"
+              alt="" height="140px" width="140px">
             <title>Placeholder</title>
             <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em"></text>
             </svg>
@@ -116,7 +118,8 @@
             <!-- <p><a class="btn" href="#">View details &raquo;</a></p> -->
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="rounded-circle" src="https://i.imgur.com/yC4IfAS.png" alt="" height="140px" width="140px">
+            <img class="rounded-circle animate__animated animate__heartBeat" src="https://i.imgur.com/yC4IfAS.png"
+              alt="" height="140px" width="140px">
             <!-- <img src="https://i.imgur.com/ohdrr04.mp4" allow="autoplay" frameborder="0"></iframe> -->
             <title>Placeholder</title>
             <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em"></text>
@@ -129,7 +132,8 @@
             <p><a class="btn" href="#timetable">View Classes</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="rounded-circle" src="https://i.imgur.com/EnXNUrl.png" alt="" height="140px" width="140px">
+            <img class="rounded-circle animate__animated animate__heartBeat" src="https://i.imgur.com/JnnY4YA.png"
+              alt="" height="140px" width="140px">
             <title>Placeholder</title>
             <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em"></text>
             </svg>
@@ -148,7 +152,7 @@
 
         <hr class="featurette-divider">
 
-        <div class="row featurette">
+        <div class="row featurette ">
           <div class="col-md-7">
             <h2 class="featurette-heading">Meet the Coaches:</h2>
             <h2><span class="text-muted">Fara Fonseca</span></h2>
