--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <img src="https://i.imgur.com/yC4IfAS.png" width="30" height="30" class="nav-logo"
           class="d-inline-block align-top" alt="">
-        <a class="navbar-brand" href="#"><span>Fonseca Fitness</span> </a>
+        <a class="navbar-brand" href="./index.html"><span>Fonseca Fitness</span> </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
           aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -58,13 +58,16 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"><span>Home</span></a>
+              <a class="nav-link active" aria-current="page" href="./about.html"><span>About Us</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#timetable"><span>Timetable</span></a>
+              <a class="nav-link" href="./timetable.html"><span>Timetable</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#membership-group"><span>Membership</span></a>
+              <a class="nav-link" href="./pricing.html"><span>Pricing</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contact.html"><span>Contact Us</span></a>
             </li>
           </ul>
           <form class="d-flex">
@@ -129,7 +132,7 @@
             <p>We work in synergy bringing together individual skills and expertise to createbest possible outcomes for
               you, the women of Fonseca Fitness.
             </p>
-            <p><a class="btn" href="#timetable">View Classes</a></p>
+            <p><a class="btn" href="./timetable.html">View Classes</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img class="rounded-circle animate__animated animate__heartBeat" src="https://i.imgur.com/JnnY4YA.png"
@@ -154,8 +157,8 @@
 
         <div class="row featurette ">
           <div class="col-md-7">
-            <h2 class="featurette-heading">Meet the Coaches:</h2>
-            <h2><span class="text-muted">Fara Fonseca</span></h2>
+            <h2 class="featurette-heading"><span>Fara Fonseca</span></h2>
+
             <p>Farah founded Fonseca Fitness in 2012 and is our head coach
 
               Farah has worked with thousands of women to help them to become the best version of themselves. In
@@ -178,302 +181,43 @@
             all
             areas of your health journey.
             </p>
+            <a href="./about.html"><button class="btn">Meet the Coaches</button></a>
           </div>
           <div class="col-md-5">
 
             <img src="https://i.imgur.com/a0oFrHr.png" height="600px" width="600px" alt="">
-            <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-            height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-            preserveAspectRatio="xMidYMid slice" focusable="false"> -->
-            <!-- <title>Placeholder</title> -->
-            <!-- <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em">Head Coach: Farah
-            Fonseca</text> -->
           </div>
         </div>
-
-        <hr>
-
-        <div class="row row-cols-1 row-cols-md-2 g-4 text-center">
-          <div class="col">
-            <div class="card">
-              <img src="https://i.imgur.com/uVH4HUp.png"" class=" card-img-top mx-auto" alt="...">
-              <div class="card-body">
-                <h5 class="card-title"><span>Zoë Baxter</span></h5>
-                <p class="card-text">Zoë is our second head coach and will be a familiar face to many. Zoë will be
-                  in
-                  the studio most days offering classes and 1-2-1 personal training. Zoe is a level 3 personal
-                  trainer
-                  and has 5 years experience in the fitness industry. Zoë has prepped for 2 bikini competitions and
-                  a
-                  local strongwoman competition, she understands what it means to truly focus on her body, her
-                  health
-                  and what she can achieve. As a mother Zoë understand first hand how important it is to have the
-                  right
-                  balance between motherhood and health. “There is a unique strength that comes from women
-                  supporting
-                  each other and that is why I am grateful to be a part of the Fonseca Fitness family. I am excited
-                  to
-                  work with everyone and support their goals”.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card" id="card">
-              <img src="https://i.imgur.com/ckfLVJ7.png" class="card-img-top mx-auto" alt="...">
-              <div class="card-body">
-                <h5 class="card-title"><span>Tom</span></h5>
-                <p class="card-text">Tom is our women's self defence coach and will be in the studio twice a week.
-
-                  Tom has 10 yrs. Grappling* experience and 7 -8 years coaching experience.
-                  Tom has a Paraestra UK Brazilian Jiu Jitsu (BJJ) Black Belt. If you didn’t know already, that’s
-                  the
-                  highest achievement within BJJ. In fact, you can always call him a professor.
-
-                  Tom has coached women, men & children for BJJ self defence Sport BJJ, Submission Grappling &
-                  Wrestling.
-
-                  Tom will coach beginners/hobbyists all the way through to high level grapplers and had the chance
-                  to
-                  experience coaching at some of the biggest Grappling events in the world.
-                  Tom is eager to share this amazing Martial art with all the women of Fonseca Fitness.
-
-                   *Refers to the act of gripping your opponent
-
-                  **Whilst we had the option of a female coach, we felt it more realistic to lean self defence with
-                  a
-                  male coach.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="https://i.imgur.com/KPSqKqc.png" class="card-img-top mx-auto" alt="...">
-              <div class="card-body">
-                <h5 class="card-title"><span>Trish</span></h5>
-                <p class="card-text">Trish is our over 50’s coach and will be in the studio once a week.
-                  Trish has been teaching group classes for nearly 20 years. Classes have ranged from aqua aerobics,
-                  body balance, body pump and pulmonary maintenance and has worked with women of all ages to stay
-                  mobile
-                  regardless of their level of ability.
-                  “I am excited to be working with the women of Fonseca fitness. I enjoy supporting women,
-                  regardless of
-                  age or ability, have the confidence to exercise and maintain a strong healthy body”
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="https://i.imgur.com/P3JHZqD.png" class="card-img-top mx-auto mx-auto" alt="...">
-              <div class="card-body">
-                <h5 class="card-title"><span>Lola</span></h5>
-                <p class="card-text">Lola is our pre and postnatal personal trainer.
-
-                  Lola has been teaching women pregnancy exercise for over 10 years. As a qualified Midwife Lola
-                  bring a
-                  wealth of experience that supports pregnancy exercise and movement as well as preparation for
-                  labour
-                  and the early postnatal stage.
-
-                  You will see Lola teaching our post natal rehabilitation classes and her Hypo Tone and Mama Tone
-                  classes during the week.
-
-                  Hypo Tone concentrates on the pelvic floor and diaphragmatic breathing, the foundation of all
-                  movement. Perfect for rehabilitation and a functional pelvic floor.
-
-                  Lola’s has a passion to ensure women have knowledge about their body and the power to have
-                  autonomy
-                  over their bodies.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="https://i.imgur.com/nOuC0TB.png" class="card-img-top mx-auto" alt="...">
-              <div class="card-body">
-                <h5 class="card-title"><span>Janka</span></h5>
-                <p class="card-text">Janka is our Calisthenics coach and personal trainer. You’ll see Janka teaching
-                  Calisthenics on a Thursday evening.
-
-                  Janka started her fitness journey about 4 years ago and found her way into calisthenics about 3
-                  years
-                  ago. Janka was intrigued to lean more about calisthenics and what her body could do, how it could
-                  be
-                  strong and move without the use of equipment.
-
-                  Calisthenics allowed Janka to set some new goals outside of the standard gym styles of training.
-                  One
-                  of her favourite movements is her handstand.
-
-                  Janka is excited to join the team at Fonseca Fitness as the calisthenics coach and work with women
-                  and
-                  show them how you can be strong just using your own bodyweight.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="https://i.imgur.com/sbbWIgY.png" class="card-img-top mx-auto" alt="...">
-              <div class="card-body">
-                <h5 class="card-title"><span>Beth</span></h5>
-                <p class="card-text">Beth is our Yoga Coach. You will see Beth in the studio on Friday evenings.
-                  Beth is originally from Cape Town, South Africa, where she studied Hatha Yoga.
-                  Beth has been teaching yoga for 14 years, and it is absolutely her best career decision ever made.
-                  Regular yoga practice not only improves your physical strength, flexibility and stability, but
-                  also
-                  helps to calm the mind and emotional state, thereby enabling better decisions and reactions.
-                  Beth gets great satisfaction seeing women take their journey into yoga and collecting al the
-                  benefits
-                  that comes with it.
-                </p>
-              </div>
-            </div>
-          </div>
-
-        </div>
-        <hr class="featurette-divider">
       </div>
-      <div class="container-fluid">
-        <div class="row justify-content-center">
-          <div class="col-auto">
-            <div class="table-responsive">
-              <table class="table">
-                <img src="https://i.imgur.com/kwbAzMF.png" class="card-img" id="timetable" alt="...">
+      <hr class="featurette-divider">
 
-                <img src="https://i.imgur.com/yJMKFq8.png" class="card-img" id="timetable" alt="">
 
-                <img src="https://i.imgur.com/vJWE5Ij.png" class="card-img" id="timetable" alt="">
+      <!-- FOOTER -->
 
-              </table>
-            </div>
+      <footer class="footer">
+        <nav class="navbar navbar-expand-md navbar-dark bg-black">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#"><strong><span>Fonseca Fitness</span></strong><br>
+              <span> Unit 3 Telford Road <br>
+                Basingstoke <br>
+                RG21 6YU </span><br>
+              <a class="nav-link active" aria-current="page" href="#"><span>Back to the Top</span></a>
+            </a>
+
+
+            <span class="mx auto">Call or e-mail Farah: 07568163126 - farah@fonsecafitness.co.uk </span>
+            <form class="d-flex">
+
+              <a href="https://www.facebook.com/FonsecaFitness1/"><i class="fa-brands fa-facebook-square fa-2x"></i></a>
+              <a href="https://www.instagram.com/fonsecafitness_/"><i class="fa-brands fa-instagram fa-2x"></i></a>
+
+              <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
+
+            </form>
           </div>
-        </div>
+        </nav>
 
-      </div>
-
-    </div>
-    </div>
-
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-10 text-center mx-auto">
-        <img class="rounded-circle" src="https://i.imgur.com/yC4IfAS.png" alt="" height="140px" width="140px">
-        <h2 class="featurette-heading"><span>Mission Statement</span></h2>
-        <p class="lead">Fonseca Fitness is an all-encompassing environment for women. We want women
-          to have the confidence to train throughout life, taking into consideration the role hormones play and
-          understanding how they can impact your overall health. We want to support women in training from
-          pre-natal,
-          through to pregnancy, post-natal, and motherhood. The busy working women, the women who want to
-          maintain a strong body as they age and those that want to try something new when it comes to fitness and
-          wellbeing. </p>
-        <p class="lead"> Our aim is to give the women of Fonseca Fitness the opportunity to progress withguidance,
-          education and training in a supportive community to work towards their individual goals. </p>
-        <p class="lead">Fonseca Fitness is about creating an exclusive community that women desire to be a part
-          of.
-          Why? Because
-          there is nothing else
-          like it.</p>
-        <p class="lead">The environment will provide an exclusive membership, with unlimited access to a variety of
-          classes, 1-1 personaltraining, nutritional support, along with discount on supplements* and clothing
-          brands*
-          that work with Fonseca Fitness </p>
-      </div>
-    </div>
-    <hr class="featurette-divider">
-    <div class="row justify-content-center">
-      <div class="col-auto">
-        <div class="table-responsive">
-          <table class="table">
-            <img src="https://i.imgur.com/F7w5j78.png" class="card-img" id="membership" alt="...">
-
-            <img src="https://i.imgur.com/AGr4CjX.png" class="card-img" id="membership" alt="">
-
-            <img src="https://i.imgur.com/n34Yul2.png" class="card-img" id="membership" alt="...">
-
-          </table>
-        </div>
-      </div>
-    </div>
-
-    <hr>
-    <!-- /.container -->
-    <!-- <div class="container-contact100 mx-auto">
-
-      <div class="wrap-contact100">
-        <form class="contact100-form validate-form mx-auto">
-          <span class="contact100-form-title">
-            Send Us A Message
-          </span>
-
-          <div class="wrap-input100 validate-input" data-validate="Please enter your name">
-            <input class="input100" type="text" name="name" placeholder="Full Name">
-            <span class="focus-input100"></span>
-          </div>
-
-          <div class="wrap-input100 validate-input" data-validate="Please enter your email: e@a.x">
-            <input class="input100" type="text" name="email" placeholder="E-mail">
-            <span class="focus-input100"></span>
-          </div>
-
-          <div class="wrap-input100 validate-input" data-validate="Please enter your phone">
-            <input class="input100" type="text" name="phone" placeholder="Phone">
-            <span class="focus-input100"></span>
-          </div>
-
-          <div class="wrap-input100 validate-input" data-validate="Please enter your message">
-            <textarea class="input100" name="message" placeholder="Your Message"></textarea>
-            <span class="focus-input100"></span>
-          </div>
-
-          <div class="container-contact100-form-btn">
-            <button class="btn contact100-form-btn">Send</button>
-          </div>
-        </form>
-      </div>
-    </div> -->
-
-    <!-- FOOTER -->
-
-    <footer class="footer">
-      <nav class="navbar navbar-expand-md navbar-dark bg-black">
-        <div class="container-fluid">
-
-          <!-- <img src="https://i.imgur.com/yC4IfAS.png" width="30" height="30" class="nav-logo"
-            class="d-inline-block align-top" alt=""> -->
-          <a class="navbar-brand" href="#"><strong><span>Fonseca Fitness</span></strong><br>
-            <span> Unit 3 Telford Road <br>
-              Basingstoke <br>
-              RG21 6YU </span><br>
-            <a class="nav-link active" aria-current="page" href="#"><span>Back to the Top</span></a>
-          </a>
-
-          <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
-              <li class="nav-item">
-
-              </li>
-            </ul> -->
-          <span class="mx auto">Call or e-mail Farah: 07568163126 - farah@fonsecafitness.co.uk </span>
-          <form class="d-flex">
-
-            <a href="https://www.facebook.com/FonsecaFitness1/"><i class="fa-brands fa-facebook-square fa-2x"></i></a>
-            <a href="https://www.instagram.com/fonsecafitness_/"><i class="fa-brands fa-instagram fa-2x"></i></a>
-
-            <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
-
-          </form>
-        </div>
-      </nav>
-
-    </footer>
+      </footer>
   </main>
 
   <script src="index.js"></script>
