pricing table changed

--- a/pricing.html
+++ b/pricing.html
@@ -41,14 +41,7 @@
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet">
 </head>
-<style>
-    body {
-        background-image: url('https://i.imgur.com/yC4IfAS.png');
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-position: center;
-    }
-</style>
+
 
 <body>
 
@@ -94,25 +87,124 @@
     </header>
 
     <main>
-
+        <div class="container-fluid mx-auto">
+            <img class="rounded-circle animate__animated animate__heartBeat mx-auto text-center" id="pricingimg"
+                src="https://i.imgur.com/yteyLtf.png" alt="" height="140px" width="140px">
+        </div>
         <h1 class="text-center" id="pricingtitle"><span>Pricing</span></h1>
-        <div class="row justify-content-center">
-            <div class="col-auto">
-                <div class="table-responsive">
-                    <table class="table">
-                        <img src="https://i.imgur.com/F7w5j78.png"
-                            class="card-img animate__animated animate__fadeInLeft" id="membership" alt="...">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card h-100" id="membership">
 
-                        <img src="https://i.imgur.com/AGr4CjX.png"
-                            class="card-img animate__animated animate__fadeInDown" id="membership" alt="">
+                    <div class="card-body animate__animated animate__fadeInLeft"">
+                        <h3 class=" card-title"><span>12 Month Membership - £72</span></h3>
+                        <p class="card-text">12 month membership , includes access to all
+                            classes, 15 minute studio induction, access to our
+                            community members group and exclusive discounts
+                            on our merchandise.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100" id="membership">
 
-                        <img src="https://i.imgur.com/n34Yul2.png"
-                            class="card-img animate__animated animate__fadeInRight" id="membership" alt="...">
+                    <div class="card-body animate__animated animate__fadeIn">
+                        <h3 class="card-title"> <span>Mum and Baby - £45</span></h3>
+                        <p class="card-text">Pay monthly, no fixed contract, includes access to 3 mum
+                            and baby classes per week at 9.30am, 15 minute studio
+                            induction, access to our community members group and
+                            exclusive discounts on our merchandise.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100" id="membership">
 
-                    </table>
+                    <div class="card-body animate__animated animate__fadeInRight">
+                        <h3 class="card-title"> <span>Drop In - £12.50</span> </h3>
+                        <p class="card-text">Access to one Fonseca Fitness class.
+                            (Expires within 24 hours).</p>
+                    </div>
                 </div>
             </div>
         </div>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card h-100" id="membership">
+                    <div class="card-body animate__animated animate__fadeInLeft">
+                        <h3 class="card-title"> <span>6 Month Membership - £76</span></h3>
+                        <p class="card-text">6 month membership , includes access to all classes,
+                            15 minute studio induction, access to our community
+                            members group and exclusive discounts on our
+                            merchandise.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100" id="membership">
+                    <div class="card-body animate__animated animate__fadeIn">
+                        <h3 class="card-title"> <span>Masters 60+ - £45</span></h3>
+                        <p class="card-text">Pay monthly, no fixed contract, includes access to 3 mum
+                            and baby classes per week at 9.30am, 15 minute studio
+                            induction, access to our community members group and
+                            exclusive discounts on our merchandise.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100" id="membership">
+                    <div class="card-body animate__animated animate__fadeInRight">
+                        <h3 class="card-title"> <span>Personal 1-1 Training - £ POA</span></h3>
+                        <p class="card-text">Pay monthly, no fixed contract, includes access to 3 mum
+                            and baby classes per week at 9.30am, 15 minute studio
+                            induction, access to our community members group and
+                            exclusive discounts on our merchandise.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card h-100" id="membership">
+                    <div class="card-body animate__animated animate__fadeInLeft">
+                        <h3 class=" card-title"> <span>Per Month - £70</span> </h3>
+                        <p class="card-text">There are coaches on hand for 1-1 training within our
+                            studio dependent on your goal, we will tailor you to
+                            the right coach to fit your needs.
+                            Please e-mail us for availability.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100" id="membership">
+                    <div class="card-body animate__animated animate__fadeIn">
+                        <h3 class="card-title"><span> Under 16's - £20</span></h3>
+                        <p class="card-text">Membership for under 16's that has a relative as a member.
+                            Access to two 45 minute classes per week.</p>
+                    </div>
+                    <div class="card-footer animate__animated animate__fadeIn">
+                        <h3 class="card-title"><span> Under 16's - £40</span></h3>
+
+                        <div class="card-text">Membership for under 16's that does not have a relative as
+                            a member. Access to two 45 minute classes per week.</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100" id="membership">
+                    <div class="card-body animate__animated animate__fadeInRight">
+                        <h3 class="card-title"><span>Semi Private Training - £30</span></h3>
+                        <p class="card-text">If you want to experience small group training then
+                            semi private training is just that. You still receive a
+                            tailored programme to follow, however there will be
+                            1 coach, to 3 clients in a 55 minute session.
+                            Please e-mail us for availability.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <hr class="featurette-divider">
 
         <footer class="footer">
             <nav class="navbar navbar-expand-md navbar-dark bg-black">
