--- a/timetable.html
+++ b/timetable.html
@@ -97,13 +97,13 @@
                 <div class="col-auto">
                     <div class="table-responsive">
                         <table class="table">
-                            <img src="https://i.imgur.com/kwbAzMF.png"
+                            <img src="https://i.imgur.com/ukwMAlS.png"
                                 class="card-img animate__animated animate__fadeInLeft" id="timetable" alt="...">
 
-                            <img src="https://i.imgur.com/yJMKFq8.png"
+                            <img src="https://i.imgur.com/63pTnsT.png"
                                 class="card-img animate__animated animate__fadeInDown" id="timetable" alt="">
 
-                            <img src="https://i.imgur.com/vJWE5Ij.png"
+                            <img src="https://i.imgur.com/gu8eRzN.png"
                                 class="card-img animate__animated animate__fadeInRight" id="timetable" alt="">
 
                         </table>
