--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top">
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-black">
             <div class="container-fluid">
 
                 <img src="https://i.imgur.com/yC4IfAS.png" width="30" height="30" class="nav-logo"
