--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
   <!-- Bootstrap core CSS -->
-  <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet"> -->
 
   <style>
     .bd-placeholder-img {
@@ -103,6 +103,8 @@
 
       <div class="container marketing">
 
+
+
         <!-- Three columns of text below the carousel -->
         <div class="row">
           <div class="col-lg-4">
@@ -185,7 +187,7 @@
           </div>
           <div class="col-md-5">
 
-            <img src="https://i.imgur.com/a0oFrHr.png" height="600px" width="600px" alt="">
+            <img src="https://i.imgur.com/CnaCvxM.jpg" height="600px" width="500px" alt="">
           </div>
         </div>
       </div>
@@ -221,7 +223,7 @@
   </main>
 
   <script src="index.js"></script>
-  <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="../assets/dist/js/bootstrap.bundle.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
     crossorigin="anonymous"></script>
