timetable added and terms and conditions

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
 
     <!-- Bootstrap core CSS -->
-    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet"> -->
 
     <style>
         .bd-placeholder-img {
@@ -119,15 +119,15 @@
                 <p class="lead animate__animated animate__fadeInRight">The environment will provide an exclusive
                     membership, with unlimited access to a variety
                     of
-                    classes, 1-1 personaltraining, nutritional support, along with discount on supplements* and
+                    classes, 1-1 personaltraining, nutritional support, along with discount on supplements and
                     clothing
-                    brands*
+                    brands
                     that work with Fonseca Fitness </p>
             </div>
             <br>
         </div>
         <hr class="featurette-divider">
-        <h2 class="mx-auto text-center"><span>Meet the Coaches</span></h2>
+        <h2 class="mx-auto text-center"><span id="meetthecoaches">Meet the Coaches</span></h2>
         <div class="row row-cols-1 row-cols-md-2 g-4 text-center">
 
             <div class="col">
@@ -342,7 +342,7 @@
 
 
         <script src="index.js"></script>
-        <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- <script src="../assets/dist/js/bootstrap.bundle.min.js"></script> -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
             integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
             crossorigin="anonymous"></script>
