--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 
 
     <!-- Bootstrap core CSS -->
-    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet"> -->
 
     <style>
         .bd-placeholder-img {
@@ -107,6 +107,57 @@
                 </div>
 
             </div>
+            <hr class="featurette-divider">
+
+            <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                            Terms and Conditions
+                        </button>
+                    </h2>
+                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">
+                            <ol>
+                                <li> Our memberships are available for minimum term of 1, 6 or
+                                    12 months.</li>
+                                <li> All payments are to be made via Direct Debit on the 1st of
+                                    every month.</li>
+                                <li> If you are paying by direct debit and you fall behind with
+                                    your membership fees and this is not caused by bank error,
+                                    we may suspend or cancel your membership.We may pass
+                                    your details to a debt collection company to recover any
+                                    outstanding payments.</li>
+                                <li> Once a member, you will need to download our Fonseca
+                                    Fitness App in order to book onto classes.</li>
+                                <li> If you are on any membership, apart from Mum & Baby you
+                                    are welcome to access any of our classes.</li>
+                                <li> If you sign up for personal training with any of our coaches,
+                                    you will be invoiced in arrears for the month you have
+                                    trained. These payments are due on the 1st of every month.</li>
+                                <li>The prices, availabilities and ability to have physical or
+                                    virtual personal training is dictated by the trainer
+                                    themselves, as self-employed.</li>
+                                <li>You can book classes in advance via our App.</li>
+                                We may disable your access to the booking class system if
+                                we deem that you're booking and not attending at a high
+                                frequency.</li>
+                                <li> If you need to take a temporary break from your
+                                    membership for any reason you can freeze your
+                                    membership for 1 month at a time. To still have access to
+                                    our facebook support group & App this will be charged at
+                                    £15 per month whilst your full membership is frozen. You
+                                    must request to freeze your membership at least 5 days
+                                    before your DD is due.</li>
+                            </ol>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <hr class="featurette-divider">
 
 
             <footer class="footer">
@@ -136,7 +187,7 @@
             </main>
 
             <script src="index.js"></script>
-            <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+            <!-- <script src="../assets/dist/js/bootstrap.bundle.min.js"></script> -->
             <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
                 integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
                 crossorigin="anonymous"></script>
