--- a/pricing.html
+++ b/pricing.html
@@ -19,7 +19,7 @@
 
 
     <!-- Bootstrap core CSS -->
-    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet"> -->
 
     <style>
         .bd-placeholder-img {
@@ -87,8 +87,8 @@
     </header>
 
     <main>
-        <div class="container-fluid mx-auto">
-            <img class="rounded-circle animate__animated animate__heartBeat mx-auto text-center" id="pricingimg"
+        <div class="container-fluid align-items-center text-center">
+            <img class="rounded-circle animate__animated animate__heartBeat" id="pricingimg"
                 src="https://i.imgur.com/yteyLtf.png" alt="" height="140px" width="140px">
         </div>
         <h1 class="text-center" id="pricingtitle"><span>Pricing</span></h1>
@@ -235,7 +235,7 @@
     </main>
 
     <script src="index.js"></script>
-    <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="../assets/dist/js/bootstrap.bundle.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
         crossorigin="anonymous"></script>
