--- a/timetable.html
+++ b/timetable.html
@@ -19,16 +19,9 @@
 
 
     <!-- Bootstrap core CSS -->
-    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet"> -->
 
     <style>
-        body {
-            background-image: url('https://i.imgur.com/yC4IfAS.png');
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-position: center;
-        }
-
         .bd-placeholder-img {
             font-size: 1.125rem;
             text-anchor: middle;
@@ -93,63 +86,167 @@
 
     <body>
         <div class="container-fluid">
-            <div class="row justify-content-center">
-                <div class="col-auto">
-                    <div class="table-responsive">
-                        <table class="table">
-                            <img src="https://i.imgur.com/ukwMAlS.png"
-                                class="card-img animate__animated animate__fadeInLeft" id="timetable" alt="...">
 
-                            <img src="https://i.imgur.com/63pTnsT.png"
-                                class="card-img animate__animated animate__fadeInDown" id="timetable" alt="">
 
-                            <img src="https://i.imgur.com/gu8eRzN.png"
-                                class="card-img animate__animated animate__fadeInRight" id="timetable" alt="">
+            <div style="overflow-x: auto;">
+                <table class="table-responsive table-bordered animate__animated animate__slideInRight" id="table">
+                    <thead>
+                        <tr>
+                            <strong>
+                                <th scope="col">Time</th>
+                                <th scope="col">Monday</th>
+                                <th scope="col">Tuesday</th>
+                                <th scope="col">Wednesday</th>
+                                <th scope="col">Thursday</th>
+                                <th scope="col">Friday</th>
+                                <th scope="col">Saturday</th>
+                                <th scope="col">Sunday</th>
+                            </strong>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">6 - 6:45</th>
+                            <td>BURN</td>
+                            <td></td>
+                            <td>BURN</td>
+                            <td></td>
+                            <td>BURN</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">7 - 7:45</th>
+                            <td>POWER</td>
+                            <td>BURN</td>
+                            <td>POWER</td>
+                            <td>BURN</td>
+                            <td>POWER</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">8 - 8:45</th>
+                            <td>OVER 50'S</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
 
-                        </table>
-                    </div>
-                </div>
+                        </tr>
+                        <tr>
+                            <th scope="row">9:30 - 10:15</th>
+                            <td>MUM & BABY</td>
+                            <td></td>
+                            <td>MUM & BABY</td>
+                            <td>POSTNATAL REHABILITAION</td>
+                            <td>MUM & BABY</td>
+                            <td>BOXING</td>
+                            <td> FEMALE SELF DEFENCE (9-10:30)
+                                | POWER (9-9:45) </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">10 - 10:45</th>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>BURN</td>
+                            <td>BURN</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">16:15 - 17:00</th>
+                            <td>11 - 16 STRENGTH AND EMPOWERMENT</td>
+                            <td>MUM & DAUGHTER WORKOUT</td>
+                            <td>11 - 16 STRENGTH AND EMPOWERMENT</td>
+                            <td>MUM & DAUGHTER WORKOUT</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">17:30 - 18:15</th>
+                            <td>BURN</td>
+                            <td>BURN</td>
+                            <td>POWER</td>
+                            <td>POWER (17:30 - 18:15)| CALISTHENICS (17:30-19:00)</td>
+                            <td>PARTY NIGHT</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">18:30 - 19:30</th>
+                            <td>CALISTHENICS (18:30-19:30) | POWER (18:30-19:15) </td>
+                            <td>POWER</td>
+                            <td>BURN (18:30-19:15) | FEMALE SELFDEFENCE (18:30-19:30) </td>
+                            <td>BURN</td>
+                            <td>PARTY NIGHT</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">19:30 - 20:15</th>
+                            <td></td>
+                            <td>OVER 50'S (19:30-20:15) | STRONGWOMAN (19:30-20:15) </td>
+                            <td>BOXING</td>
+                            <td>MAMATONE* (19:15-20:15) | POWER (19:30-20:15)</td>
+                            <td>YOGA</td>
+                            <td></td>
+                            <td>YOGA</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">20:30 - 21:15</th>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>HYPOTONE*</td>
+                            <td></td>
+                            <td>*Incurs extra cost. To be booked separately.</td>
+                            <td>**Timetable subject to change.</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
 
-        </div>
+            <footer class="footer">
+                <nav class="navbar navbar-expand-md navbar-dark bg-black">
+                    <div class="container-fluid mx-auto">
+                        <a class="navbar-brand" href="#"><strong><span>Fonseca Fitness</span></strong><br>
+                            <span> Unit 3 Telford Road <br>
+                                Basingstoke <br>
+                                RG21 6YU </span><br>
+                            <a class="nav-link active" aria-current="page" href="#"><span>Back to the Top</span></a>
+                        </a>
 
 
-        <footer class="footer">
-            <nav class="navbar navbar-expand-md navbar-dark bg-black">
-                <div class="container-fluid mx-auto">
-                    <a class="navbar-brand" href="#"><strong><span>Fonseca Fitness</span></strong><br>
-                        <span> Unit 3 Telford Road <br>
-                            Basingstoke <br>
-                            RG21 6YU </span><br>
-                        <a class="nav-link active" aria-current="page" href="#"><span>Back to the Top</span></a>
-                    </a>
+                        <span class="mx auto">Call or e-mail Farah: 07568163126 - farah@fonsecafitness.co.uk </span>
+                        <form class="d-flex">
 
+                            <a href="https://www.facebook.com/FonsecaFitness1/"><i
+                                    class="fa-brands fa-facebook-square fa-2x"></i></a>
+                            <a href="https://www.instagram.com/fonsecafitness_/"><i
+                                    class="fa-brands fa-instagram fa-2x"></i></a>
 
-                    <span class="mx auto">Call or e-mail Farah: 07568163126 - farah@fonsecafitness.co.uk </span>
-                    <form class="d-flex">
+                            <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
 
-                        <a href="https://www.facebook.com/FonsecaFitness1/"><i
-                                class="fa-brands fa-facebook-square fa-2x"></i></a>
-                        <a href="https://www.instagram.com/fonsecafitness_/"><i
-                                class="fa-brands fa-instagram fa-2x"></i></a>
+                        </form>
+                    </div>
+                </nav>
 
-                        <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
+            </footer>
+            </main>
 
-                    </form>
-                </div>
-            </nav>
-
-        </footer>
-        </main>
-
-        <script src="index.js"></script>
-        <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-            integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-            integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-            crossorigin="anonymous"></script>
+            <script src="index.js"></script>
+            <!-- <script src="../assets/dist/js/bootstrap.bundle.min.js"></script> -->
+            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+                integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+                crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+                integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+                crossorigin="anonymous"></script>
 
 
     </body>
