--- a/contact.html
+++ b/contact.html
@@ -141,9 +141,9 @@
                                     virtual personal training is dictated by the trainer
                                     themselves, as self-employed.</li>
                                 <li>You can book classes in advance via our App.</li>
-                                We may disable your access to the booking class system if
-                                we deem that you're booking and not attending at a high
-                                frequency.</li>
+                                <li>We may disable your access to the booking class system if
+                                    we deem that you're booking and not attending at a high
+                                    frequency.</li>
                                 <li> If you need to take a temporary break from your
                                     membership for any reason you can freeze your
                                     membership for 1 month at a time. To still have access to
