--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                                     Us</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./timetable.html"><span>Timetable</span></a>
+                            <a class="nav-link" href="./timetable.html"><span>Classes</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./pricing.html"><span>Pricing</span></a>
