--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <a class="nav-link active" aria-current="page" href="./about.html"><span>About Us</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./timetable.html"><span>Timetable</span></a>
+              <a class="nav-link" href="./timetable.html"><span>Classes</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./pricing.html"><span>Pricing</span></a>
@@ -77,6 +77,7 @@
 
             <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
             <button class="btn session" type="submit">Book a Session</button>
+
           </form>
         </div>
       </div>
@@ -171,9 +172,9 @@
               qualification.
               Farah has completed a course at the National Institute for Eating Disorders to help women and young
               girls
-              address their relationship with both themselves, others and food.  
+              address their relationship with both themselves, others and food. I also have a few sporting achievements
+              under my belt (quite literally).
             <ul>
-              <li> I also have a few sporting achievements under my belt (quite literally)</li>
               <li> 3 x England’s Strongest Woman</li>
               <li> 1 x Britain’s Strongest Woman</li>
               <li> 2018 Strongest Woman in the World</li>
