--- a/pricing.html
+++ b/pricing.html
@@ -62,7 +62,7 @@
                             <a class="nav-link active" aria-current="page" href="./about.html"><span>About Us</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./timetable.html"><span>Timetable</span></a>
+                            <a class="nav-link" href="./timetable.html"><span>Classes</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./pricing.html"><span>Pricing</span></a>
