added animation to classes page

--- a/timetable.html
+++ b/timetable.html
@@ -93,7 +93,7 @@
     <body>
         <div class="container-fluid">
             <div class="accordion accordion-flush" id="accordionFlushExample">
-                <div class="accordion-item" style="color: orange;">
+                <div class="accordion-item animate__animated animate__fadeInLeft" style="color: orange;">
                     <h2 class="accordion-header" style="color: black;" id="flush-headingOne">
                         <button class="accordion-button collapsed btn d-block text-center" type="button"
                             data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false"
@@ -118,7 +118,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item">
+                <div class="accordion-item animate__animated animate__fadeInRight">
                     <h2 class="accordion-header" id="flush-headingTwo">
                         <button class="accordion-button collapsed d-block text-center" type="button"
                             data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false"
@@ -141,7 +141,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item">
+                <div class="accordion-item animate__animated animate__fadeInLeft">
                     <h2 class="accordion-header" id="flush-headingThree">
                         <button class="accordion-button collapsed d-block text-center" type="button"
                             data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false"
